# envelope-email

./: .gitignore  AUDIT-RESULTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SKILL.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  mcp.rs
crates/cli/src/commands/: accounts.rs  attachments.rs  code.rs  common.rs  contacts.rs  datetime.rs  drafts.rs  flags.rs  folders.rs  inbox.rs  messages.rs  mod.rs  read.rs  rule.rs  scheduled.rs  search.rs  send.rs  snooze.rs  thread.rs  watch.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs
crates/dashboard/static/: dashboard.js
crates/email/: Cargo.toml
crates/email/src/: code_extractor.rs  discovery.rs  errors.rs  folders.rs  idle.rs  imap.rs  lib.rs  rules.rs  sieve.rs  smtp.rs  threading.rs
crates/store/: Cargo.toml
crates/store/src/: accounts.rs  action_log.rs  contacts.rs  credential_store.rs  crypto.rs  db.rs  drafts.rs  errors.rs  events.rs  lib.rs  license_store.rs  migrations.rs  models.rs  rule_store.rs  snoozed.rs  threads.rs
docs/: 20260324-junk-profile-spec.md  selfhosted-post-v2.md  show-hn-draft-v2.md  threading-security-review.md
