# Copyright (c) 2026 Tyler Martin
# Licensed under FSL-1.1-ALv2 (see LICENSE)

[package]
name = "envelope-email-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Minimal localhost dashboard for Envelope Email account management"

[dependencies]
envelope-email-store = { path = "../store" }

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
