# Copyright (c) 2026 Tyler Martin
# Licensed under FSL-1.1-ALv2 (see LICENSE)

[package]
name = "envelope-email-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SQLite persistence, credential encryption, and config store for Envelope Email"

[features]
default = ["keychain"]
keychain = ["dep:keyring"]

[dependencies]
rusqlite.workspace = true
rusqlite_migration = "1.3"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Crypto
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
base64.workspace = true

# OS keychain (optional — needed for --credential-store keychain)
keyring = { workspace = true, optional = true }
dirs-next.workspace = true

# Machine identity for file-based credential store
hostname = "0.4"
whoami = "1"
